# tars

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_fleet_schema.py  0002_mqtt_runtime_metadata.py  0003_mission_orders.py  27dbc30ce032_creating_agvs_table.py
backend/api/v1/: __init__.py
backend/api/v1/agv/: agv_routes.py
backend/api/v1/messenger/: messenger.routes.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/mqtt/: __init__.py  asyncio_compat.py  inbound.py  outbound.py  worker.py
backend/app/services/: event_bus.py  instant_action_service.py  map_service.py  mission_dispatch.py  mission_service.py  robot_registry.py
backend/app/vda5050/: instant_actions.py  order_builder.py  topics.py  validator.py
backend/core/: auth.py  config.py  cors.py  database.py  deps.py  logging.py
backend/db/models/: __init__.py  agv_model.py
backend/db/repositories/: agv_repository.py
backend/db/schemas/: agv_schema.py  base_schema.py
backend/schemas/: agv_schema.py  base_schema.py
backend/services/: agv_service.py
backend/tests/: conftest.py
backend/tests/repositories/: test_agv_repository.py
backend/tests/services/: test_agv_service.py
backend/tests/unit/: test_health.py
backend/utils/: __init__.py  topic_generator.py
clients/python-simulator/: Dockerfile  README.md  pyproject.toml
clients/python-simulator/tests/: test_payloads.py  test_simulator.py
(+116 files in other folders)
