[project]
name = "tars-robot-simulator"
version = "0.1.0"
description = "Research-friendly VDA 5050 v3.0.0 mobile robot simulator for TARS"
requires-python = ">=3.12"
dependencies = [
  "aiomqtt>=2.3.0",
]

[project.scripts]
tars-robot-sim = "tars_robot_simulator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tars_robot_simulator"]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
